<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_system_information"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_system_information" />

    <item
        android:id="@+id/navigation_sensor_information"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_sensor_information" />

</menu>
