<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:background="@color/white">
    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        app:riv_border_color="@color/white"
        app:riv_border_width="0dp"
        app:riv_corner_radius="5dp"
        android:src="@drawable/headimage"
        android:id="@+id/app_head"
        android:layout_gravity="center">
    </com.makeramen.roundedimageview.RoundedImageView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/item_name">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/app_name">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/flow"
                >
            </TextView>
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:id="@+id/app_flow">
            </TextView>
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/all_time"
                android:layout_marginLeft="5dp"
                >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/app_time">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
